fix: ios z-index and fixed position glitch

--- a/packages/website/styles/nextra-theme.css
+++ b/packages/website/styles/nextra-theme.css
@@ -816,6 +816,7 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  transform: translate3d(0, 0, 0);
 }
 @media (min-width: 768px) {
   .nextra-container .sidebar {
